--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           {
             numero: "3º semestre", materias: [
               { id: "QAEI", nombre: "Química analítica e instrumental (3)", previas: ["Biolog"] },
-              { id: "Qorg", nombre: "Química orgánica", previas: ["Biolog"] },
+              { id: "Qorg", nombre: "Química orgánica (3)", previas: ["Biolog"] },
               { id: "BC", nombre: "Biología celular (3)", previas: ["Biolog"] },
               { id: "Metlab", nombre: "Métodos de laboratorio 1 (3)", previas: ["Biointro"] },
               { id: "EEDD", nombre: "Ecuaciones diferenciales (3)"},
